--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ jobs:
   build:
     uses: charmbracelet/meta/.github/workflows/build.yml@main
 
+  lint:
+    uses: charmbracelet/meta/.github/workflows/lint.yml@main
+
   snapshot:
     uses: charmbracelet/meta/.github/workflows/snapshot.yml@main
     secrets:
